fix: подогнал под макет focus visible

--- a/styles/style.css
+++ b/styles/style.css
@@ -149,7 +149,7 @@
 }
 
 .card__icon-button {
-  height: 37px;
+  height: 36px;
   border: 2px solid;
   border-color: var(--main-bg-color, #fff);
   padding: 0;
